Fix how/when it alerts that you've completed the sudoku successfully, and started to add dark mode setting and styles.

--- a/src/Grid.css
+++ b/src/Grid.css
@@ -72,6 +72,8 @@
 
 .cell input:disabled {
     color: #000;
+    -webkit-text-fill-color: #000;
+    opacity: 1;
 }
 
 .candidates {
@@ -91,4 +93,39 @@
 
 .hide-candidates .candidates {
     display: none;
+}
+
+/* --------------- Dark Mode --------------- */
+
+.dark-mode .cell {
+    border-color: #666;
+}
+.dark-mode #grid {
+    border-color: #d6d6d6;
+}
+.dark-mode .cell-row-2,
+.dark-mode .cell-row-5 {
+    border-bottom-color: #d6d6d6;
+}
+.dark-mode .cell-column-2,
+.dark-mode .cell-column-5 {
+    border-right-color: #d6d6d6;
+}
+.dark-mode .highlight-givens .given {
+    background-color: #282828;
+}
+.dark-mode .cell input:disabled {
+    color: #d6d6d6;
+    -webkit-text-fill-color: #d6d6d6;
+}
+.dark-mode .highlight-solvable-cells .can-be-solved {
+    background-color: #384738;
+    box-shadow: inset 0 0 0 1px #303030, inset 0 0 0 2px #5c685c;
+}
+.dark-mode .highlight-incorrect-cells .incorrect {
+    background-color: #533838;
+    box-shadow: inset 0 0 0 1px #303030, inset 0 0 0 2px #7e6464;
+}
+.dark-mode .candidates {
+    color: #d6d6d6;
 }
